# LostAndFoundPy

./: .gitignore  Dockerfile  README.md  app.yaml  config.toml  cron.yaml  docker-compose.yml  entrypoint.sh  main.py  poll-cron  pyproject.toml  requirements.txt
lostandfound/: core.py  main.py  slackapp.py
tests/: test_lostandfound.py
